final pre-deployment fixes and refactoring done

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,11 +7,10 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Grigory Gerasimov's diploma project - Optics eShop"
+            content="B2B eShop for an imaginary company Optics Deluxe"
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>React App</title>
+        <title>Optics Deluxe B2B</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
